--- a/org/agenda.org
+++ b/org/agenda.org
@@ -3,6 +3,7 @@
 #+SUBTITLE:Agenda - DSC 482 - Applied Math for Data Science, Fall 2022
 #+STARTUP:overview hideblocks indent inlineimages
 #+OPTIONS: toc:nil num:nil ^:nil
+#+property: header-args:R :session *R* :results output
 #+attr_html: :width 200px
 [[../img/dice.jpg]]
 
@@ -466,6 +467,7 @@ On (2): check Judeah Pearl's [[https://en.wikipedia.org/wiki/The_Book_of_Why]["B
 - [X] Off-topic: [[https://github.com/birkenkrahe/dsmath/issues/38][Laporta algorithm (Feynman diagram evaluation)]]
 - [X] Review: test 4
 - [X] Review: DataCamp lesson probability and distributions
+- [ ] Review: logical flag vectors
 - [ ] Practice: statistical variables (continued)
 - [ ] Lecture/practice: summary statistics
 
@@ -550,10 +552,102 @@ On (2): check Judeah Pearl's [[https://en.wikipedia.org/wiki/The_Book_of_Why]["B
    #+end_notes
    
 ** DONE Raw data: statistical variables (practice)
-** TODO Lecture/practice: summary statistics
+* Stats news: university ranking ([[https://github.com/birkenkrahe/dsmath/issues/39][issue]])
+
+- Columbia U math professor uncovers stats lies
+- Columbia U moved up from 18th to 2nd between 1988 and 2022
+
+#+attr_html: :width 600px
+[[../img/ascent.jpg]]
+
+* Review: logical flag vectors
+
+
+
+Can you name and explain the 9 elements of this expression?
+
+~chickwts$weight[chickwts$feed == "soybean"]~
+
+#+begin_src R
+  str(chickwts)
+#+end_src
+
+#+RESULTS:
+: 'data.frame':	71 obs. of  2 variables:
+:  $ weight: num  179 160 136 227 217 168 108 124 143 140 ...
+:  $ feed  : Factor w/ 6 levels "casein","horsebean",..: 2 2 2 2 2 2 2 2 2 2 ...
+
+#+begin_src R
+  chickwts$weight
+#+end_src
+
+#+RESULTS:
+:  [1] 179 160 136 227 217 168 108 124 143 140 309 229 181 141 260 203 148 169 213
+: [20] 257 244 271 243 230 248 327 329 250 193 271 316 267 199 171 158 248 423 340
+: [39] 392 339 341 226 320 295 334 322 297 318 325 257 303 315 380 153 263 242 206
+: [58] 344 258 368 390 379 260 404 318 352 359 216 222 283 332
+
+#+begin_src R
+  chickwts$feed
+#+end_src
+
+#+RESULTS:
+#+begin_example
+ [1] horsebean horsebean horsebean horsebean horsebean horsebean horsebean
+ [8] horsebean horsebean horsebean linseed   linseed   linseed   linseed  
+[15] linseed   linseed   linseed   linseed   linseed   linseed   linseed  
+[22] linseed   soybean   soybean   soybean   soybean   soybean   soybean  
+[29] soybean   soybean   soybean   soybean   soybean   soybean   soybean  
+[36] soybean   sunflower sunflower sunflower sunflower sunflower sunflower
+[43] sunflower sunflower sunflower sunflower sunflower sunflower meatmeal 
+[50] meatmeal  meatmeal  meatmeal  meatmeal  meatmeal  meatmeal  meatmeal 
+[57] meatmeal  meatmeal  meatmeal  casein    casein    casein    casein   
+[64] casein    casein    casein    casein    casein    casein    casein   
+[71] casein   
+Levels: casein horsebean linseed meatmeal soybean sunflower
+#+end_example
+
+#+begin_src R
+  chickwts$feed == "soybean"
+#+end_src
+
+#+RESULTS:
+:  [1] FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE
+: [13] FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE  TRUE  TRUE
+: [25]  TRUE  TRUE  TRUE  TRUE  TRUE  TRUE  TRUE  TRUE  TRUE  TRUE  TRUE  TRUE
+: [37] FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE
+: [49] FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE
+: [61] FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE
+
+#+begin_src R
+  chickwts$weight[chickwts$feed == "soybean"]
+#+end_src
+
+#+RESULTS:
+:  [1] 243 230 248 327 329 250 193 271 316 267 199 171 158 248
+
+#+begin_src R
+  which(chickwts$feed == "soybean")
+  chickwts$weight[which(chickwts$feed == "soybean")]
+#+end_src
+
+#+RESULTS:
+:  [1] 23 24 25 26 27 28 29 30 31 32 33 34 35 36
+:  [1] 243 230 248 327 329 250 193 271 316 267 199 171 158 248
+
+#+begin_src R :results output
+  str(chickwts) # data frame structure
+  chickwts$feed # factor vector, categorical-nominal
+  chickwts$feed == "soybean" # logical vector 
+  which(chickwts$feed == "soybean") # numveric index vector
+  chickwts$weight[chickwts$feed == "soybean"] # numeric vector
+  #+end_src
+
+* TODO Lecture/practice: summary statistics
 #+attr_html: :width 500px
 [[../img/4_terminallist.jpg]]
 
+* Week 6: 
 ** TODO Review: DataCamp - Central Limit Theorem
 * References
 
