--- a/org/agenda.org
+++ b/org/agenda.org
@@ -456,7 +456,7 @@ On (2): check Judeah Pearl's [[https://en.wikipedia.org/wiki/The_Book_of_Why]["B
   3) "Join the R community" - [[https://journals.plos.org/ploscompbiol/article/figure?id=10.1371/journal.pcbi.1010372.g002][I also use Twitter]]
   4) "Read others' code, and share yours" - use GitHub
   5) "Don't box yourself in" - use languages for what they're good at
-
+     
 * Week 5: summary statistics
 #+attr_html: :width 300px
 #+caption: Charles II of England (1630-1685)
@@ -552,6 +552,9 @@ On (2): check Judeah Pearl's [[https://en.wikipedia.org/wiki/The_Book_of_Why]["B
    #+end_notes
    
 ** DONE Raw data: statistical variables (practice)
+
+[[../img/4_practice.jpg]]
+
 ** Stats news: university ranking ([[https://github.com/birkenkrahe/dsmath/issues/39][issue]])
 
 - Columbia U math professor uncovers stats lies
