--- a/org/agenda.org
+++ b/org/agenda.org
@@ -296,7 +296,7 @@ factors for that outcome:
 | Number of apples on a tree                                 | numeric-discrete    |
 | Seniority ("freshman", "junior", "sophomore", "senior")    | categorical-ordinal |
 | Employment status ("full-time", "part-time", "unemployed") | categorical-nominal |
- 
+
 *** History of probability and statistics
 
 Match the dominant way of finding out truth, and the historical
@@ -313,16 +313,16 @@ period.
 
 ~df~ is a data frame with four variables: ~person~, ~age~ in years, ~sex~ (~M~
 or ~F~), and ~height~ in cm. Complete the R command to extract the persons
-who are taller than 180 cm. 
+who are taller than 180 cm.
 
 #+begin_example R
-  df$___ [ df$___ > 180]  
+  df$___ [ df$___ > 180]
 #+end_example
 
- - [X] ~person~ ~height~
- - [ ] ~height~ ~person~
- - [ ] ~persons~ ~height~
- - [ ] ~sex~ ~height~ 
+- [X] ~person~ ~height~
+- [ ] ~height~ ~person~
+- [ ] ~persons~ ~height~
+- [ ] ~sex~ ~height~
 
 *** Solution
 
@@ -333,9 +333,9 @@ who are taller than 180 cm.
     age = c(42, 40, 17, 14, 1),
     sex = factor(c("M", "F", "F", "M", "M")),
     height = c(182, 177, 168, 179, 187))
-    df
-    subset(x=df,df$height>180)
-    df$person[df$height>180]
+  df
+  subset(x=df,df$height>180)
+  df$person[df$height>180]
 #+end_src
 
 #+RESULTS: extract
@@ -354,10 +354,10 @@ who are taller than 180 cm.
 
 ** ~C-c C-c can do nothing useful here~ error
 
-  Try ~M-x org-mode-restart~. 
+Try ~M-x org-mode-restart~.
 
 * Week 4: describing raw data
- [[../img/fall.jpg]]
+[[../img/fall.jpg]]
 
 - [ ] How Emacs, Org-mode and ESS work together
 - [ ] Review test 3 - summary statistics
@@ -385,11 +385,11 @@ On (2): check Judeah Pearl's [[https://en.wikipedia.org/wiki/The_Book_of_Why]["B
 
 - Pride according to the Oxford dictionary:
   #+begin_quote
-   »A feeling of being pleased or satisfied that you get when you or
-   people who are connected with you have *done something well* or *own
-   something* that other people *admire*.«
+  »A feeling of being pleased or satisfied that you get when you or
+  people who are connected with you have *done something well* or *own
+  something* that other people *admire*.«
   #+end_quote
- In other words: if you cannot identify what you're proud of, you either haven't done anything well, or you're not aware of it, which won't do.
+  In other words: if you cannot identify what you're proud of, you either haven't done anything well, or you're not aware of it, which won't do.
 
 - Of course, /"pride comes before the fall"/ (Proverbs 16:18), but in
   the context of Scrum, it is only one of several qualities to assess
@@ -438,10 +438,10 @@ On (2): check Judeah Pearl's [[https://en.wikipedia.org/wiki/The_Book_of_Why]["B
 
 [[../img/exercise.jpg]]
 
- - Go to the practice file ([[https://raw.githubusercontent.com/birkenkrahe/dsmath/main/org/3_raw_data_practice.org][GitHub]]: [[https://tinyurl.com/23f9uz8s][tinyurl.com/23f9uz8s]])
- - Complete the practice exercise on *data frames*
- - You can find example code in the lecture ([[https://github.com/birkenkrahe/dsmath/blob/main/org/3_raw_data.org#example-data-frames][GitHub]]:
-   [[https://tinyurl.com/2am222mh][tinyurl.com/2am222mh]])
+- Go to the practice file ([[https://raw.githubusercontent.com/birkenkrahe/dsmath/main/org/3_raw_data_practice.org][GitHub]]: [[https://tinyurl.com/23f9uz8s][tinyurl.com/23f9uz8s]])
+- Complete the practice exercise on *data frames*
+- You can find example code in the lecture ([[https://github.com/birkenkrahe/dsmath/blob/main/org/3_raw_data.org#example-data-frames][GitHub]]:
+  [[https://tinyurl.com/2am222mh][tinyurl.com/2am222mh]])
 
 ** NEXT [[https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1010372][Ten simple rules for teaching yourself R (Lawlor et al, 2022)]]
 #+attr_html: :width 500px
@@ -456,7 +456,7 @@ On (2): check Judeah Pearl's [[https://en.wikipedia.org/wiki/The_Book_of_Why]["B
   3) "Join the R community" - [[https://journals.plos.org/ploscompbiol/article/figure?id=10.1371/journal.pcbi.1010372.g002][I also use Twitter]]
   4) "Read others' code, and share yours" - use GitHub
   5) "Don't box yourself in" - use languages for what they're good at
-     
+
 * Week 5: summary statistics
 #+attr_html: :width 300px
 #+caption: Charles II of England (1630-1685)
@@ -485,18 +485,18 @@ On (2): check Judeah Pearl's [[https://en.wikipedia.org/wiki/The_Book_of_Why]["B
 1) What is the conditional probability for an event B given that an
    event A has already happened (as a formula)
    #+begin_notes
-     Formula: P(B|A) = P(A and B) / P(A)
+   Formula: P(B|A) = P(A and B) / P(A)
    #+end_notes
 
 2) How can you visualize the conditional probability formula for
    events A and B?
 
    #+begin_notes
-     Example: A = Order for kitchen products, B = Orders over $150
-     #+attr_html: :width 500px
-     [[../img/kitchen1.png]]
+   Example: A = Order for kitchen products, B = Orders over $150
+   #+attr_html: :width 500px
+   [[../img/kitchen1.png]]
    #+end_notes
-   
+
 3) A men's soccer team plays soccer zero, one, or two days a week:
    - the probability that they play zero days is .2,
    - the probability that they play one day is .5, and
@@ -516,12 +516,12 @@ On (2): check Judeah Pearl's [[https://en.wikipedia.org/wiki/The_Book_of_Why]["B
    E(DAYS) = μ = ∑ x P(x) = 0 * 0.2 + 1 * .5 + 2 * .3 = 1.1
    #+end_notes
 
-   #+begin_src R 
-        ## number of days the team plays per week
-        x <- c(0,1,2)  # events
-        p_x <- c(0.2, 0.5, 0.3) # probability per event
-        mu <- sum(x * p_x) # expected value
-        paste("expected value: ", mu)
+   #+begin_src R
+     ## number of days the team plays per week
+     x <- c(0,1,2)  # events
+     p_x <- c(0.2, 0.5, 0.3) # probability per event
+     mu <- sum(x * p_x) # expected value
+     paste("expected value: ", mu)
    #+end_src
 
    #+RESULTS:
@@ -530,27 +530,27 @@ On (2): check Judeah Pearl's [[https://en.wikipedia.org/wiki/The_Book_of_Why]["B
 4) What is the /law of large numbers/?
 
    #+begin_notes
-     As the size of your sample increases, the sample mean will
-     approach the expected value (the population average).
+   As the size of your sample increases, the sample mean will
+   approach the expected value (the population average).
    #+end_notes
 
    #+begin_src R :file ../img/sample.png :results output graphics file
-    x <- sample(rep(1:6),size=10,replace=TRUE)
-    hist(x, xlab="10 rolls, fair dice", main="die roll")
-    abline(v = mean(x), col="red",lwd=2)
-    abline(v = sum(x/6),col="blue",lwd=2)
+     x <- sample(rep(1:6),size=10,replace=TRUE)
+     hist(x, xlab="10 rolls, fair dice", main="die roll")
+     abline(v = mean(x), col="red",lwd=2)
+     abline(v = sum(x/6),col="blue",lwd=2)
    #+end_src
 
    #+RESULTS:
    [[file:../img/sample.png]]
-   
+
 5) What is the probability that a baby will be born between midnight
    and 8 am? (If all hours are equally probable.)
 
    #+begin_notes
-     A day has 24 hours - midnight to 8 am is 8/24 or 1/3, so 33%. 
+   A day has 24 hours - midnight to 8 am is 8/24 or 1/3, so 33%.
    #+end_notes
-   
+
 ** Raw data: statistical variables (practice)
 
 [[../img/4_practice.jpg]]
@@ -648,15 +648,31 @@ Levels: casein horsebean linseed meatmeal soybean sunflower
   chickwts$weight[chickwts$feed == "soybean"] # numeric vector
 #+end_src
 
-* Week 6: 
+* Week 6:
 ** TODO Lecture/practice: summary statistics
 #+attr_html: :width 500px
 [[../img/4_terminallist.jpg]]
 
 ** TODO Review: DataCamp - Central Limit Theorem
-** Featured
+** Featured applications: [[https://github.com/birkenkrahe/dsmath/issues][(issues)]]
 
 - [[https://twitter.com/jburnmurdoch/status/1570832839318605824?t=A8nGlSN0QZpywzxfBu0__w&s=09][Investigation of income equality in US and UK using percentiles]]
+  #+attr_html: :width 500px
+  [[../img/income.jpg]]
+
+- [[https://phys.org/news/2022-09-science-reveals-universal-cells-power.html][Data science reveals universal rules shaping cells' power stations]]
+  #+begin_quote
+  "The scientists took a data-driven approach. They gathered data on all
+  the organelle DNA that has been sequenced across life. They then used
+  modeling, biochemistry, and structural biology to represent a wide
+  range of different hypotheses about gene retention as a set of numbers
+  associated with each gene. Using tools from data science and
+  statistics, they asked which ideas could best explain the patterns of
+  retained genes in the data they had compiled—testing the results with
+  unseen data to check their power."
+  #+end_quote
+  #+attr_html: :width 500px
+  [[../img/organelles.jpg]]
   
 
 * References
@@ -665,4 +681,3 @@ Lawlor J, Banville F, Forero-Muñoz N-R, Hébert K, Martínez-Lanfranco
 JA, Rogy P, et al. (2022) Ten simple rules for teaching yourself
 R. PLoS Comput Biol 18(9):
 e1010372. https://doi.org/10.1371/journal.pcbi.1010372
-
